--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div class="circle">
+        <div class="hand hours"></div>
+        <div class="hand minutes"></div>
       <div class="hand second"></div>
-      <div class="hand hours"></div>
-      <div class="hand minutes"></div>
     </div>
 
     <style>
@@ -76,9 +76,9 @@
         const minsDegrees = (minutes / 60) * 360 + (seconds / 60) * 6 + 90;
         const hourDegrees = (hour / 12) * 360 + (minutes / 60) * 30 + 90;
 
-        secondHand.style.transform = `translate(-0%, -50%) rotate(${secondsDegrees}deg)`;
-        minutesHand.style.transform = `translate(-0%, -50%) rotate(${minsDegrees}deg)`;
-        hoursHand.style.transform = `translate(-0%, -50%) rotate(${hourDegrees}deg)`;
+        secondHand.style.transform = `translate(-0%, -50%) rotate(${secondsDegrees+180}deg)`;
+        minutesHand.style.transform = `translate(-0%, -50%) rotate(${minsDegrees+180}deg)`;
+        hoursHand.style.transform = `translate(-0%, -50%) rotate(${hourDegrees+180}deg)`;
       }
 
       setInterval(setDate, 1000);
